Changed something in the code!

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h2>Programming Language</h2>
     <h3>Programming Language</h3>
     <h4>Programming Language</h4>
-    <h5>Programming Language</h5>
-    <h6>Programming Language</h6>
+    <h5>War... War never changes...</h5>
+    <h6>Programming Language3</h6>
 
     <!--Paragraph Tags-->
     <p>Good Luck Jose!</p>
